德州bug 21点bug修复