@@ -94,7 +94,7 @@ public class TexasPlayCardPhase extends BasePlayCardPhase<TexasGameDataVo> {
                     .playerId(first.getPlayerId())
                     .seatId(gameDataVo.getDealerSeatId())
                     .overTime(gameDataVo.getPlayerTimerEvent().getNextTime())
-                    .totalBet(gameDataVo.getPool().get(0).getAmount());
+                    .totalBet(gameDataVo.getPool().getFirst().getAmount());
             Map<Long, PlayerSeatInfo> collect = playerSeatInfo.stream()
                     .collect(Collectors.toMap(PlayerSeatInfo::getPlayerId, info -> info));
             //通知玩家
@@ -132,8 +132,8 @@ public class TexasPlayCardPhase extends BasePlayCardPhase<TexasGameDataVo> {
         gameDataVo.getBaseBetInfo().put(info.getPlayerId(), sBBetValue);
         GamePlayer gamePlayer = gameDataVo.getGamePlayer(info.getPlayerId());
         controller.changePlayerGold(gamePlayer, -sBBetValue);
-        gameDataVo.getPool().get(0).addChips(sBBetValue);
-        gameDataVo.getPool().get(0).addEligiblePlayer(info.getPlayerId());
+        gameDataVo.getPool().getFirst().addChips(sBBetValue);
+        gameDataVo.getPool().getFirst().addEligiblePlayer(info.getPlayerId());
         //添加记录
         historyRoundInfo.roundInfo.add(TexasBuilder.getTexasHistoryPlayerInfo(info, gameDataVo, sBBetValue));
         texasHistory.getTotalPlayerBetInfoMap().get(info.getPlayerId()).betValue = sBBetValue;
@@ -143,8 +143,8 @@ public class TexasPlayCardPhase extends BasePlayCardPhase<TexasGameDataVo> {
         gameDataVo.getBaseBetInfo().put(info.getPlayerId(), BBBetValue);
         gamePlayer = gameDataVo.getGamePlayer(info.getPlayerId());
         controller.changePlayerGold(gamePlayer, -BBBetValue);
-        gameDataVo.getPool().get(0).addChips(BBBetValue);
-        gameDataVo.getPool().get(0).addEligiblePlayer(info.getPlayerId());
+        gameDataVo.getPool().getFirst().addChips(BBBetValue);
+        gameDataVo.getPool().getFirst().addEligiblePlayer(info.getPlayerId());
         gameDataVo.setMaxBetValue(BBBetValue);
         //添加记录
         historyRoundInfo.roundInfo.add(TexasBuilder.getTexasHistoryPlayerInfo(info, gameDataVo, BBBetValue));
